--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 
 </html>
